--- a/index.html
+++ b/index.html
@@ -5,20 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider Carusel</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="companies-wrapper">
+        <div class="companies-hor">
+            <div class="companies-hor-item">1<img src="" alt=""></div>
+            <div class="companies-hor-item">2<img src="" alt=""></div>
+            <div class="companies-hor-item">3<img src="" alt=""></div>
+            <div class="companies-hor-item">4<img src="" alt=""></div>
+            <div class="companies-hor-item">5<img src="" alt=""></div>
+            <div class="companies-hor-item">6<img src="" alt=""></div>
+            <div class="companies-hor-item">7<img src="" alt=""></div>
+        </div>
+    </div>
+
     <script src="sliderCarousel.js"></script>
 
     <script>
 
         const options = {
             main: '.companies-wrapper',
-            wrap: '.companies-hor'
+            wrap: '.companies-hor',
+            slidesToShow: 4,
+            infinity: true
         };
 
         const carousel = new SliderCarousel(options);
 
-        // 25:33
         carousel.init();
     </script>
 </body>
